<resources>
    <string name="app_name">IOU</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_bill">Bill</string>
    <string name="title_map">Map</string>
    <string name="split_by_item">Split by Item</string>
    <string name="add_a_bill">Add a Bill</string>
    <string name="split_evenly">Split Evenly</string>
    <string name="where_did_you_go">Where did you go?</string>
    <string name="add_people_separated_by_commas">Add people (separated by commas)</string>
    <string name="add_item_prices_separated_by_commas">Add item prices (separated by commas)</string>
    <string name="final_bill_amount">Final Bill Amount</string>
    <string name="next">Next</string>
    <string name="username" />
    <string name="username2">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_a_login">Don\'t have a login?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username3">Username</string>
    <string name="logout">Logout</string>
    <string name="item_price">Item Price</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="save_bill">Save Bill</string>
    <string name="IOU">IOU</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="click_to_go_to_map">Click to go to Map</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="settings">Settings</string>
    <string name="what_do_you_want_to_eat">What do you want to eat?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_available_information">: No Available Information</string>
    <string name="restaurant_is_closed">: Restaurant is Closed</string>
    <string name="restaurant_is_open">: Restaurant is Open</string>

</resources>