<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bill.activities.SplitInformationActivity">

    <EditText
        android:id="@+id/etLocationEven"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:hint="@string/where_did_you_go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeopleEven"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:hint="@string/add_people_separated_by_commas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLocationEven" />


    <EditText
        android:id="@+id/etFinalBillEven"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:hint="@string/final_bill_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPeopleEven" />

    <Button
        android:id="@+id/btnEvenNext"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>