<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bill.BillFragment">

    <TextView
        android:id="@+id/text_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/add_a_bill"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSplitItem"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/split_by_item"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddBill"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSplitEven"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/split_evenly"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddBill"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>