<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity"
    android:background="@color/background_light_purple">

    <ImageView
        android:id="@+id/ivLoginLogoSignup"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iou_logo_transparant" />

    <EditText
        android:id="@+id/etUsernameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username3"
        tools:ignore="TouchTargetSizeCheck"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginLogoSignup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/etPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameSignup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/btnSignupSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSignup"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>