<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bill.activities.SplitSettlementActivity">

    <ImageView
        android:id="@+id/ivIOULogoSettlement"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iou_logo" />

    <TextView
        android:id="@+id/tvLocationEven"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:hint="@string/restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivIOULogoSettlement"/>


    <TextView
        android:id="@+id/tvBillAmountEven"
        android:textSize="23dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:hint="@string/total_bill_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvLocationEven"/>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="344dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvBillAmountEven"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvAmountsOwedEven"
        android:textSize="23dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:hint="Tina owes 20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <Button
        android:id="@+id/btnSaveBillEven"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save_bill"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>